[package]
authors = ["Michał Krasnoborski <michal.krasnoborski@codilime.com>", "Michał Kostrzewa <michal.kostrzewa@codilime.com>"]
name = "shelly"
version = "1.0.0"

[dependencies]
failure = "0.1.1"
lazy_static = "1.0.0"
regex = "1.0.0"
walkdir = "2.1.4"
yansi = "0.4.0"
clap = "2.32.0"
structopt = "0.2.10"
toml = "0.4.6"
serde_derive = "1.0.70"
serde = "1.0.70"
unicase = "2.1.0"

[dev-dependencies]
tempdir = "0.3.7"
